--- a/README
+++ b/README
@@ -752,12 +752,12 @@ sfeed_update_xargs shellscript:
 	mkdir -p "${sfeedpath}"
 	# print feeds for parallel processing with xargs.
 	feeds | SFEED_UPDATE_CHILD="1" xargs -r -0 -P "${maxjobs}" -L 6 "$(readlink -f "$0")"
-	status=$?
+	statuscode=$?
 	# check error exit status indicator for parallel jobs.
-	test -f "${sfeedtmpdir}/ok" || status=1
+	test -f "${sfeedtmpdir}/ok" || statuscode=1
 	# cleanup temporary files etc.
 	cleanup
-	exit ${status}
+	exit ${statuscode}
 
 - - -
 
